cs3310/Assignment 2/submission/test/pass/AssignBool.java
// Pass

class AssignBool 
{
	public static void main(String[] args) 
	{
		System.out.println(new Ss().Compute(true, 11));
	}
}

class Ss
{
	public int Compute(boolean flag, int num2)
	{
		int y;
		int x;
		
		flag = (flag & (x < y));
		return num2;
	}
}
